[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["doeke <doekebuursam@gmail.com>"]
readme = "README.md"
packages = [{include = "python_boilerplate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
