[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["doeke <doekebuursam@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_boilerplate", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
